--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <li class="itens">Arlecchino - "The Knave" </li>
                     </ul>
 
-                    <img src="roda.png" class="ordem">
+                    <img src="roda.png" class="aordem">
                 </section>
             </main>
         <footer>
