--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 
                     <h2 class="titulo" class="Gorou"> Sobre </h2>
 
+                    <img class="emblema" src="emblema.png" alt="Emblema Fatui">
+
                     <p id="missao"><em> <strong> Os Fatui </em> </strong></p>
                     
                     <p class="Gorou">São uma delegação de diplomatas do Palácio Zapolyarny de Snezhnaya. </p>
