--- a/index.html
+++ b/index.html
@@ -54,21 +54,23 @@
                 <section class="Harbingers"> 
                     <h3 id="titulo" id="sao" class="oque">Harbingers</h3>
 
-                    <ul class="vida"> 
-                        <li class="itens">Pierro - "The Jester"</li>
-                        <li class="itens">Columbina - "Damselette"</li>
-                        <li class="itens">Pulcinella - "The Rooster"</li>
-                        <li class="itens">Scaramouche - "Balladeer"</li>
-                        <li class="itens">La Signora - "The Fair Lady"</li>
-                        <li class="itens">Pantalone - "Regrator"</li>
-                        <li class="itens">Tartaglia - "Childe"</li>
-                        <li class="itens">Il Dottore - "The Doctor"</li>
-                        <li class="itens">Il Capitano -  "The Captain"</li>
-                        <li class="itens">Sandrone - "Marionette"</li>
-                        <li class="itens">Arlecchino - "The Knave" </li>
-                    </ul>
+                    <div class="conteudo-itens">
+                        <ul class="lista-itens"> 
+                            <li class="itens">Pierro - "The Jester"</li>
+                            <li class="itens">Columbina - "Damselette"</li>
+                            <li class="itens">Pulcinella - "The Rooster"</li>
+                            <li class="itens">Scaramouche - "Balladeer"</li>
+                            <li class="itens">La Signora - "The Fair Lady"</li>
+                            <li class="itens">Pantalone - "Regrator"</li>
+                            <li class="itens">Tartaglia - "Childe"</li>
+                            <li class="itens">Il Dottore - "The Doctor"</li>
+                            <li class="itens">Il Capitano -  "The Captain"</li>
+                            <li class="itens">Sandrone - "Marionette"</li>
+                            <li class="itens">Arlecchino - "The Knave" </li>
+                        </ul>
 
-                    <img src="roda.png" class="aordem">
+                        <img src="roda.png" class="aordem">
+                    </div>
 
                     <div class="video">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/TmaAOV4SJNQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
