--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
                             <li class="itens">Il Capitano -  "The Captain"</li>
                             <li class="itens">Sandrone - "Marionette"</li>
                             <li class="itens">Arlecchino - "The Knave" </li>
-                        </ul>
-
-                        <img src="roda.png" class="aordem">
+                        </ul><img src="roda.png" class="aordem">
                     </div>
 
                     <div class="video">
