--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                     <img class="emblema" src="emblema.png" alt="Emblema Fatui">
 
-                    <p id="missao"><em><strong> Os Fatui</em></strong></p>
+                    <p class="missao"><em><strong> Os Fatui</em></strong></p>
                     
                     <p class="Gorou">São uma delegação de diplomatas do Palácio Zapolyarny de Snezhnaya. </p>
 
