--- a/contato.html
+++ b/contato.html
@@ -22,7 +22,7 @@
             </div>    
         </header>
 
-        <main class="porra">
+        <main>
             <form>
                 <label for="codenome"> Nome/Codenome </label>
                 <input type="text" id="codenome" class="input-padrao" required>
