--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                     <h3 class="titulo">Local de Referência</h3>
                     <p> A nação de Snezhnaya foi inspirada em uma provável localização nas paisagens da Rússia</p>
 
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2505.964690390119!2d88.76948815148808!3d51.090659148807866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x42cbe411b0f120d7%3A0x51e12289f495ec7c!2sReserva%20da%20Biosfera%20Natural%20do%20Estado%20de%20Altai!5e0!3m2!1spt-BR!2sbr!4v1669842121411!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div class="mapa-conteudo">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2505.964690390119!2d88.76948815148808!3d51.090659148807866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x42cbe411b0f120d7%3A0x51e12289f495ec7c!2sReserva%20da%20Biosfera%20Natural%20do%20Estado%20de%20Altai!5e0!3m2!1spt-BR!2sbr!4v1669842121411!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
+                    </div>
                 </section>
 
                 <section class="Harbingers"> 
